--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
 	"name": "nextjs-hybrid-auth",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"format": "prettier --write .",
 		"codegen": "openapi-ts",
-		"test": "jest --watch",
-		"coverage": "jest --coverage && node -e \"console.log('📄 Coverage report: file:///' + require('path').resolve('coverage/lcov-report/index.html'))\"",
-		"test:ci": "jest --ci --coverage",
+		"test": "vitest",
+		"test:watch": "vitest --watch",
+		"test:ui": "vitest --ui",
+		"coverage": "vitest run --coverage && node -e \"console.log('📄 Coverage report: file:///' + require('path').resolve('coverage/index.html'))\"",
+		"test:ci": "vitest run --coverage",
 		"dev": "next dev",
 		"build": "next build",
 		"start": "docker-compose up --build",
@@ -52,18 +55,23 @@
 		"@testing-library/user-event": "^14.6.1",
 		"@types/glob": "^8.1.0",
 		"@types/jest": "^29.5.12",
+		"@types/lodash": "^4.17.20",
 		"@types/node": "^20.12.7",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@types/react-world-flags": "^1.6.0",
+		"@vitejs/plugin-react": "^4.7.0",
+		"@vitest/coverage-v8": "^3.2.4",
+		"@vitest/ui": "^3.2.4",
 		"dotenv-cli": "^7.4.1",
 		"eslint": "^9.34.0",
 		"glob": "^11.0.3",
+		"happy-dom": "^18.0.1",
 		"jest": "^29.7.0",
 		"jest-fixed-jsdom": "^0.0.2",
 		"jest-html-reporter": "^3.10.2",
 		"jest-junit": "^16.0.0",
-		"jsdom": "^24.0.0",
+		"jsdom": "^24.1.3",
 		"msw": "^2.4.10",
 		"next-router-mock": "^0.9.13",
 		"postcss": "^8.4.38",
@@ -74,7 +82,8 @@
 		"sharp": "^0.33.3",
 		"style-dictionary": "^5.0.2",
 		"tsx": "^4.20.5",
-		"typescript": "^5.4.5"
+		"typescript": "^5.4.5",
+		"vitest": "^3.2.4"
 	},
 	"msw": {
 		"workerDirectory": [
