feat: connect reset password and activate account pages

--- a/api-spec/express-hybrid-auth-api.yml
+++ b/api-spec/express-hybrid-auth-api.yml
@@ -275,12 +275,12 @@ components:
       type: object
       required:
         - token
-        - newPassword
+        - password
       properties:
         token:
           type: string
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
-        newPassword:
+        password:
           type: string
           example: StrongNewPassword!2025
     Verify2FARequest:
