--- a/.devcontainer/docker-compose.prod.yml
+++ b/.devcontainer/docker-compose.prod.yml
@@ -54,5 +54,16 @@ services:
         environment:
             - Logging__LogLevel__Default=Information
 
+    dozzle:
+        container_name: dozzle
+        image: amir20/dozzle:latest
+        ports:
+            - '9999:8080'
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock:ro
+        restart: unless-stopped
+        environment:
+            - DOZZLE_LEVEL=debug
+
 volumes:
     postgres_data:
