--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
 		"@mui/icons-material": "^5.8.4",
 		"@tabler/icons-react": "^3.2.0",
 		"@tanstack/react-query": "^5.80.6",
+		"@types/jsonwebtoken": "^9.0.10",
 		"axios": "^1.9.0",
 		"check-password-strength": "^2.0.10",
 		"classnames": "^2.5.1",
 		"date-fns": "^2.29.3",
+		"jsonwebtoken": "^9.0.2",
 		"next": "^15.5.4",
 		"next-intl": "^4.1.0",
 		"react": "^18.3.1",
