feat: add two factor authentication page

--- a/api-spec/express-hybrid-auth-api.yml
+++ b/api-spec/express-hybrid-auth-api.yml
@@ -291,6 +291,12 @@ components:
         code:
           type: string
           example: '123456'
+    ValidateSessionResponse:
+      type: object
+      properties:
+        valid:
+          type: boolean
+          description: Whether the session and refresh token are valid
     CsrfTokenResponse:
       type: object
       properties:
@@ -1246,6 +1252,34 @@ paths:
                 code: USER_NOT_FOUND
         '500':
           $ref: '#/components/responses/InternalServerError'
+  /auth/validate-session:
+    get:
+      summary: Validate Session and Refresh Token
+      description: >
+        Validates both the user session and refresh token to determine if the
+        user is properly authenticated. This endpoint checks if the session
+        exists and if the refresh token is valid in Redis. Returns only the
+        validation status without exposing reasons for invalid sessions.
+      tags:
+        - Authentication
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: Session validation completed successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ValidateSessionResponse'
+              examples:
+                ValidSession:
+                  summary: Valid session and refresh token
+                  value:
+                    valid: true
+                InvalidSession:
+                  summary: Invalid session or refresh token
+                  value:
+                    valid: false
   /csrf/token:
     get:
       summary: Get CSRF token
