--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,15 @@ on:
 jobs:
     release:
         runs-on: ubuntu-latest
+        permissions:
+            contents: write
+            issues: write
+            pull-requests: write
         steps:
             - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
+                  token: ${{ secrets.GITHUB_TOKEN }}
             - uses: actions/setup-node@v4
               with:
                   node-version: '22'
